# SwearWordsDetector

./: .gitignore  README.md  main.py  pyproject.toml  train.py
datasets/: normal_words.txt  swearwords.txt
model_directory/: config.json  model.safetensors  tokenizer.json
