[project]
name = "SwearWordsDetector"
version = "0.1.0"
description = ""
authors = [
    {name = "Nodo",email = "k.nosov@innopoli.universitypoetry "}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "transformers (>=4.49.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
